ci: perform recursive builds sequentially
Something with `tsc` gets tripped up when multiple processes try to build the same package simultaneously. We haven't seen this be a problem in dev, so I'm only making this change in CI. It will slow CI down a bit, but it should reduce flakiness. Long term, I don't think we want this recursive `pnpm` package-based build setup, so I don't feel bad disabling it here.

--- a/apps/admin/frontend/package.json
+++ b/apps/admin/frontend/package.json
@@ -9,7 +9,9 @@
     "prodserver"
   ],
   "scripts": {
-    "build": "pnpm --filter $npm_package_name... build:self",
+    "build": "is-ci build:ci build:dev",
+    "build:ci": "pnpm --filter $npm_package_name... --sequential build:self",
+    "build:dev": "pnpm --filter $npm_package_name... build:self",
     "build:self": "pnpm type-check && vite build",
     "build:stubs": "script/build-stubs fs:src/stubs/fs.ts glob:src/stubs/glob.ts os:src/stubs/os.ts jsdom:src/stubs/jsdom.ts",
     "clean": "pnpm --filter $npm_package_name... clean:self",
