--- a/libs/logging/package.json
+++ b/libs/logging/package.json
@@ -11,7 +11,9 @@
   ],
   "scripts": {
     "type-check": "tsc --build",
-    "build": "pnpm --filter $npm_package_name... build:self",
+    "build": "is-ci build:ci build:dev",
+    "build:ci": "pnpm --filter $npm_package_name... --sequential build:self",
+    "build:dev": "pnpm --filter $npm_package_name... build:self",
     "build:self": "tsc --build tsconfig.build.json",
     "build:generate-docs": "pnpm esr --cache ./scripts/generate_documentation.ts",
     "build:generate-typescript-types": "pnpm esr --cache ./scripts/generate_types_from_toml.ts",
