--- a/libs/custom-scanner/package.json
+++ b/libs/custom-scanner/package.json
@@ -8,7 +8,9 @@
   "main": "build/index.js",
   "scripts": {
     "analyze-packets": "cd tools/analyze-packets && vite",
-    "build": "pnpm --filter $npm_package_name... build:self",
+    "build": "is-ci build:ci build:dev",
+    "build:ci": "pnpm --filter $npm_package_name... --sequential build:self",
+    "build:dev": "pnpm --filter $npm_package_name... build:self",
     "build:self": "tsc --build tsconfig.build.json",
     "clean": "pnpm --filter $npm_package_name... clean:self",
     "clean:self": "rm -rf build && tsc --build --clean tsconfig.build.json",
