--- a/libs/eslint-plugin-vx/package.json
+++ b/libs/eslint-plugin-vx/package.json
@@ -45,6 +45,7 @@
     "@types/react": "18.3.3",
     "@typescript-eslint/rule-tester": "^6.7.0",
     "@vitest/coverage-istanbul": "^2.1.8",
+    "eslint-plugin-vitest": "^0.5.4",
     "is-ci-cli": "2.2.0",
     "react": "18.3.1",
     "vitest": "^2.1.8"
