refactor(scan): replace inline `useInterval` with `use-interval` dep

--- a/apps/scan/frontend/package.json
+++ b/apps/scan/frontend/package.json
@@ -65,6 +65,7 @@
     "react-router-dom": "^5.3.4",
     "setimmediate": "^1.0.5",
     "styled-components": "^5.3.11",
+    "use-interval": "1.4.0",
     "use-sound": "^4.0.1",
     "util": "^0.12.4",
     "zod": "3.23.5"
