--- a/libs/logging/package.json
+++ b/libs/logging/package.json
@@ -26,8 +26,7 @@
     "test": "is-ci test:ci test:watch",
     "test:watch": "TZ=America/Anchorage vitest",
     "test:coverage": "TZ=America/Anchorage vitest --coverage",
-    "test:ci": "pnpm build && TZ=America/Anchorage vitest run --coverage && pnpm build:generate-typescript-types --check && pnpm build:generate-rust-types --check",
-    "pre-commit": "lint-staged"
+    "test:ci": "pnpm build && TZ=America/Anchorage vitest run --coverage && pnpm build:generate-typescript-types --check && pnpm build:generate-rust-types --check"
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
