--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -19,11 +19,16 @@
     "build:self": "tsc --build tsconfig.build.json",
     "clean": "pnpm --filter $npm_package_name... clean:self",
     "clean:self": "rm -rf build && tsc --build --clean tsconfig.build.json",
+    "create-org": "node -r esbuild-runner/register ./scripts/create_org.ts",
+    "create-user": "node -r esbuild-runner/register ./scripts/create_user.ts",
     "db:reset": "./scripts/db_reset_dev.sh",
     "format": "prettier '**/*.+(css|graphql|json|less|md|mdx|sass|scss|yaml|yml)' --write",
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
+    "list-orgs": "node -r esbuild-runner/register ./scripts/list_orgs.ts",
+    "list-user-orgs": "node -r esbuild-runner/register ./scripts/list_user_orgs.ts",
     "pre-commit": "lint-staged",
+    "send-welcome-email": "node -r esbuild-runner/register ./scripts/send_welcome_email.ts",
     "start": "./scripts/start.sh",
     "test": "is-ci test:ci test:watch",
     "test:ci": "TZ=America/Anchorage ./scripts/test_ci.sh",
