design/backend: Add review app config to app.json

--- a/app.json
+++ b/app.json
@@ -1,4 +1,15 @@
 {
   "name": "VotingWorks Ballot Designer",
-  "stack": "container"
+  "stack": "container",
+  "formation": {
+    "web": {
+      "quantity": 1,
+      "size": "standard-1x"
+    },
+    "worker": {
+      "quantity": 1,
+      "size": "standard-1x"
+    }
+  },
+  "addons": ["heroku-postgresql:hobby-free"]
 }
