--- a/heroku.yml
+++ b/heroku.yml
@@ -1,7 +1,3 @@
 build:
   docker:
-    web: Dockerfile.vxdesign
-    worker: Dockerfile.vxdesign
-run:
-  web: ./run-vxdesign web
-  worker: ./run-vxdesign worker
+    web: Dockerfile.quickresults
